swagger finalizado e ajuste final controller e model
