# app/controllers/admin/dashboard_controller.rb
@@ -1,4 +1,5 @@
 class Admin::DashboardController < AdminController
   def index
+    @products = Product.order(id: :asc).limit(5)
   end
 end
